implement bulk delete
